--- a/Sky High/index.html
+++ b/Sky High/index.html
@@ -666,7 +666,7 @@
                  Your Space Journey
                 </h2>
 
-                      <p>
+                      <p style="text-align: center;">
              Explore astronaut insights, space travel guides, 
                                 <br>  
               and tools to help you thrive beyond Earth.
@@ -1165,12 +1165,12 @@
 
                            <div class=" ">
                                <div class=" ">
-                                <h6>
+                                <h6 style="text-align: center;">
                                   GET IN CONTACT
                                 </h6>
                                </div>
                             <h2>🚀 Mission Control Is Here for You</h2>
-                              <p>
+                              <p style="text-align: center;">
                                 Whether you have questions, need 
                                 <br>
                                 launch guidance, or want to
